--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+html {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(44, 87, 44);
+}
